--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
 <html>
      <head>
      <title>lula$</title>
-     <link rel=stylesneet tyre="tex/css"
-               href="style.css"/>
+     <link rel="stylesheet" href="style.css">
      <script   src="script.js"></script>
      </title>
      </head>
@@ -20,4 +19,5 @@
        </tr>
        </table>
      </body>
-     </html>
+
+       </html/body>
