--- a/index.html
+++ b/index.html
@@ -8,16 +8,35 @@
      <body>
   <table>
     <tr>
-            <td>celula 1</td>
-            <td>celula 2</td>
-            <td>celula 3</td>
+            </td>biografia:</td>
+            </td>cria da vila ede,na zona norte de sao paulo,desde 2013 kevin estava no meio musical</td>
+            </td>antes de partir para a carreira de mc,kevin sonhava em ser jogador de futebol</td>
+           
+            <td>Filmes favoritos:</td>
+            <td>Os vingadores</td>
+            <td>vingadores de marvel</td>
        </tr>
        </tr>
-            <td>celula 4</td>
-            <td>celula 5</td>
-            <td>celula 6</td>
+            <td>tipos de musicas:</td>
+            <td>funk</td>
+            <td>trap</td>
        </tr>
+       </tr>
+            <td>poderes:</td>
+            <td>porche 911</td>
+            <td>land rover evoque</td>
+       </tr>
+       </tr>
+            <td>objetivos de vida:</td>
+            <td>ter sua propria casa</td>
+            <td>ser empresario</td>
+            <td>ajudar sua mae</td>
        </table>
-     </body>
+       </body>
+       </h1>kevin Nascimento Bueno</h1>
+       </ul>
+           </li>green</li>
+           </li>blue</li>
+           </li>orange</li>
 
        </html/body>
